--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
@@ -16,12 +17,14 @@
     "pinia-plugin-persist": "^1.0.0",
     "socket.io-client": "^4.7.3",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-tiptap-katex": "^1.1.27"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
+    "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
